--- a/snowflake-service/src/main/resources/snowflakejdbc.properties
+++ b/snowflake-service/src/main/resources/snowflakejdbc.properties
@@ -6,10 +6,10 @@
 #properties.put("db", "SNOWFLAKE_SAMPLE_DATA");  // replace "" with target database name
 #properties.put("schema", "TPCDS_SF100TCL");
 datasource.driver-class-name=net.snowflake.client.jdbc.SnowflakeDriver
-datasource_url=jdbc:snowflake://kj22564.canada-central.azure.snowflakecomputing.com
+datasource_url=jdbc:snowflake://XXXXXXX.canada-central.azure.snowflakecomputing.com
 datasource.username=vivekchutke
-datasource.password=Snowflake@24viv
-datasource.account=kj22564
+datasource.password=XXXXXXXXXXX
+datasource.account=XXXXXXX
 datasource.warehouse=COMPUTE_WH
 datasource.database=SNOWFLAKE_SAMPLE_DATA
 datasource.schema=TPCDS_SF100TCL
